client/src/components/_product/product.module.css
.card {
    margin: 10px;
    text-align: center;
    padding: 10px;
    max-width: 800px;
    height: 400px;
    border-bottom: 1px solid #f0ac4e4f;
}

.image {
    margin: 20px auto;
    max-width: 100%;
    object-fit: contain;
}

.imageContainer {
    margin: 20px auto;
    max-width: 100%;
    background-color: white;
    border: 2px solid #f0ac4e4f;
    border-radius: 50px;
}

.containerProduct{
    margin-top: 130px !important;
    margin-bottom: 120px !important;
    box-shadow: 0 .5rem 3rem rgba(0, 0, 0, 0.205) !important;
    padding: 3rem!important;
    min-width: 450px;
    max-width: 60%;
    background-color: rgba(236, 236, 236, 0.466);
    border-radius: 10px;
}

.btnBack{
    color: white;
    width: 200px;
    height: 50px;
    background-color: #ce9a18dc;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 30ms;
}

.btnBack:hover{
    background-color: white;
    color:  #ce9a18dc;
    border: 1px solid #ce9a18dc;
}

